@@ -39,7 +39,7 @@ struct tf_config *readconfig(char* fname) {
 	cfg_local = (struct tf_config *) memset(cfg_local, 0, sizeof(struct tf_config));
 
 	if ((cfg_file = fopen(fname, "r")) == NULL) {
-		showerr(fname);
+		report(LOG_ERR, LOG_ERR, "%s: %s", fname, strerror(errno));
 		goto fail;
 	}
 	while ((line_len = getdelim(&input, &ll, delim, cfg_file)) >= 0) {
@@ -47,8 +47,8 @@ struct tf_config *readconfig(char* fname) {
 		line_count++;
 		if ((ret = (void *) parse_sensor(&input))) {
 			if ((err = add_sensor(cfg_local, (struct sensor *) ret)) == ERR_CONF_MIX) {
-				message(LOG_ERR, MSG_FILE_HDR(fname, line_count, s_input));
-				message(LOG_ERR, MSG_ERR_CONF_MIX)
+				report(LOG_ERR, LOG_ERR, MSG_FILE_HDR(fname, line_count, s_input));
+				report(LOG_ERR, LOG_ERR, MSG_ERR_CONF_MIX);
 				goto fail;
 			}
 			else if (err) goto fail;
@@ -56,38 +56,39 @@ struct tf_config *readconfig(char* fname) {
 		else if ((ret = (void *) parse_fan(&input))) {
 			if (cfg_local->fan == NULL) cfg_local->fan = ret;
 			else {
-				message(LOG_ERR, MSG_FILE_HDR(fname, line_count, s_input));
-				message(LOG_ERR, MSG_ERR_CONF_FAN);
-				goto fail;
+				report(LOG_ERR, LOG_WARNING, MSG_FILE_HDR(fname, line_count, s_input));
+				report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_FAN);
+				if (chk_sanity) goto fail;
 			}
 		}
 		else if ((ret = (void *) parse_fan_level(&input))) {
 			if ((err = add_limit(cfg_local, (struct limit *) ret))
 					==  ERR_CONF_LOWHIGH) {
-				message(chk_sanity ? LOG_ERR : LOG_WARNING,
-						MSG_FILE_HDR(fname, line_count, s_input));
-				message(chk_sanity ? LOG_ERR : LOG_WARNING,	MSG_ERR_CONF_LOWHIGH);
+				report(LOG_ERR, LOG_WARNING, MSG_FILE_HDR(fname, line_count, s_input));
+				report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_LOWHIGH);
 				if (chk_sanity) goto fail;
 			}
 			else if (err == ERR_CONF_LEVEL) {
-				message(chk_sanity ? LOG_ERR : LOG_WARNING,
-						MSG_FILE_HDR(fname, line_count, s_input));
-				message(chk_sanity ? LOG_ERR : LOG_WARNING,	MSG_ERR_CONF_LEVEL);
+				report(LOG_ERR, LOG_WARNING, MSG_FILE_HDR(fname, line_count, s_input));
+				report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_LEVEL);
 				if (chk_sanity) goto fail;
 			}
 			else if (err == ERR_CONF_OVERLAP) {
-				message(chk_sanity ? LOG_ERR : LOG_WARNING,
-						MSG_FILE_HDR(fname, line_count, s_input));
-				message(chk_sanity ? LOG_ERR : LOG_WARNING, MSG_ERR_CONF_OVERLAP);
+				report(LOG_ERR, LOG_WARNING, MSG_FILE_HDR(fname, line_count, s_input));
+				report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_OVERLAP);
+				if (chk_sanity) goto fail;
+			}
+			else if (err == ERR_CONF_LVL0) {
+				report(LOG_ERR, LOG_WARNING, MSG_FILE_HDR(fname, line_count, s_input));
+				report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_LVL0);
 				if (chk_sanity) goto fail;
 			}
 			else if (err) goto fail;
 		}
 		else if ((ret = (void *) parse_comment(&input))) free(ret);
 		else if (!parse_blankline(&input)) {
-				message(chk_sanity ? LOG_ERR : LOG_WARNING,
-						MSG_FILE_HDR(fname, line_count, s_input));
-				message(chk_sanity ? LOG_ERR : LOG_WARNING,	MSG_ERR_CONF_PARSE);
+				report(LOG_ERR, LOG_WARNING, MSG_FILE_HDR(fname, line_count, s_input));
+				report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_PARSE);
 				if (chk_sanity) goto fail;
 		}
 		free(s_input);
@@ -97,7 +98,7 @@ struct tf_config *readconfig(char* fname) {
 	free(input);
 	input = NULL;
 	if (cfg_local->num_limits <= 0) {
-		message(LOG_ERR, MSG_ERR_CONF_NOFAN);
+		report(LOG_ERR, LOG_ERR, MSG_ERR_CONF_NOFAN);
 		goto fail;
 	}
 	fclose(cfg_file);
@@ -109,7 +110,7 @@ struct tf_config *readconfig(char* fname) {
 		}
 		else {
 			cfg_local->setfan = setfan_sysfs_safe;
-			message(LOG_WARNING, MSG_WRN_SYSFS_SAFE);
+			report(LOG_WARNING, LOG_WARNING, MSG_WRN_SYSFS_SAFE);
 		}
 		cfg_local->init_fan = init_fan_sysfs_once;
 		cfg_local->uninit_fan = uninit_fan_sysfs;
@@ -134,7 +135,7 @@ struct tf_config *readconfig(char* fname) {
 		if (depulse) cfg_local->get_temp = depulse_and_get_temp_ibm;
 		else cfg_local->get_temp = get_temp_ibm;
 		if (cfg_local->num_sensors == 0) {
-			message(LOG_WARNING, MSG_WRN_SENSOR_DEFAULT);
+			report(LOG_WARNING, LOG_NOTICE, MSG_WRN_SENSOR_DEFAULT);
 			cfg_local->sensors = malloc(sizeof(struct sensor));
 			cfg_local->sensors = memset(cfg_local->sensors, 0,
 					sizeof(struct sensor));
@@ -149,14 +150,14 @@ struct tf_config *readconfig(char* fname) {
 		for (i=0; i < cfg_local->num_sensors; i++)
 			for (j=0; j < 16; j++)
 				if (cfg_local->sensors[i].bias[j] != 0) goto done;
-		message(LOG_WARNING, MSG_WRN_CONF_NOBIAS(cfg_local->limits[0].high));
+		report(LOG_WARNING, LOG_NOTICE, MSG_WRN_CONF_NOBIAS(cfg_local->limits[0].high));
 	}
-
 done:
+
 	if (!quiet) {
-		message(LOG_INFO, MSG_INF_CONFIG);
+		report(LOG_INFO, LOG_DEBUG, MSG_INF_CONFIG);
 		for (i=0; i < cfg_local->num_limits; i++) {
-			message(LOG_INFO, MSG_INF_CONF_ITEM(
+			report(LOG_INFO, LOG_DEBUG, MSG_INF_CONF_ITEM(
 			 cfg_local->limits[i].level, cfg_local->limits[i].low,
 			 cfg_local->limits[i].high));
 		}
@@ -179,7 +180,8 @@ int add_sensor(struct tf_config *cfg, struct sensor *sensor) {
 	}
 	if (!(cfg->sensors = (struct sensor *) realloc(cfg->sensors,
 			(cfg->num_sensors+1) * sizeof(struct sensor)))) {
-		showerr("Allocating memory for config");
+		report(LOG_ERR, LOG_ERR, "Allocating memory for config: %s",
+				strerror(errno));
 		free(sensor);
 		return ERR_MALLOC;
 	}
@@ -192,25 +194,37 @@ int add_limit(struct tf_config *cfg, struct limit *limit) {
 	int rv = 0;
 
 	if (cfg->num_limits > 0) {
-		if (cfg->limits[cfg->num_limits-1].level >= limit->level)
+		if (cfg->limits[cfg->num_limits-1].level >= limit->level) {
 			rv = ERR_CONF_LEVEL;
-		if (cfg->limits[cfg->num_limits-1].high < limit->low)
+			report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_LEVEL);
+			if (chk_sanity) goto fail;
+		}
+		if (cfg->limits[cfg->num_limits-1].high < limit->low) {
 			rv = ERR_CONF_OVERLAP;
+			report(LOG_ERR, LOG_WARNING, MSG_ERR_CONF_OVERLAP);
+			if (chk_sanity) goto fail;
+		}
 	}
+	else if (limit->low > 0) rv = ERR_CONF_LVL0;
 	if (limit->high <= limit->low) rv = ERR_CONF_LOWHIGH;
 	if (!(cfg->limits = (struct limit *) realloc(cfg->limits,
 			sizeof(struct limit) * (cfg->num_limits + 1)))) {
-		showerr("Allocating memory for config");
-		return ERR_MALLOC;
+		report(LOG_ERR, LOG_ERR, "Allocating memory for config: %s",
+				strerror(errno));
+		rv = ERR_MALLOC;
+		goto fail;
 	}
 
 	cfg->limits[cfg->num_limits++] = *limit;
+
+fail:
 	free(limit);
 	return rv;
 }
 
 void free_config(struct tf_config *cfg) {
 	int j;
+	if (!cfg) return;
 	free(cfg->fan);
 	if (cfg->num_sensors > 0) {
 		for (j=0; j < cfg->num_sensors; j++)
