@@ -42,7 +42,7 @@ int get_temp_ibm() {
 	if (unlikely(((ibm_temp = open(IBM_TEMP, O_RDONLY)) < 0)
 			|| ((r = read(ibm_temp, rbuf, 128)) < 14)
 			|| (close(ibm_temp) < 0))) {
-		showerr(IBM_TEMP);
+		report(LOG_ERR, LOG_ERR, IBM_TEMP ": %s", strerror(errno));
 		errcnt++;
 		return ERR_T_GET;
 	}
@@ -56,13 +56,13 @@ int get_temp_ibm() {
 			free(tmp);
 		}
 		if (unlikely(i < 2)) {
-			message(LOG_ERR, MSG_ERR_T_GET);
+			report(LOG_ERR, LOG_ERR, MSG_ERR_T_GET);
 			errcnt++;
 			retval = ERR_T_GET;
 		}
 	}
 	else {
-		message(LOG_ERR, MSG_ERR_T_PARSE(rbuf));
+		report(LOG_ERR, LOG_ERR, MSG_ERR_T_PARSE(rbuf));
 		errcnt++;
 		retval = ERR_T_GET;
 	}
@@ -77,15 +77,14 @@ void setfan_ibm() {
 	char *buf = malloc(18 * sizeof(char));
 
 	if (unlikely((ibm_fan = open(IBM_FAN, O_RDWR, O_TRUNC)) < 0)) {
-		showerr(IBM_FAN);
+		report(LOG_ERR, LOG_ERR, IBM_FAN ": %s", strerror(errno));
 		errcnt++;
 	}
 	else {
 		if (unlikely(cur_lvl == INT_MIN)) strcpy(buf, "level disengaged\n");
 		else snprintf(buf, 10, "level %d\n", cur_lvl);
 		if (unlikely(write(ibm_fan, buf, 8) != 8)) {
-			showerr(IBM_FAN);
-			message(LOG_ERR, MSG_ERR_FANCTRL);
+			report(LOG_ERR, LOG_ERR, MSG_ERR_FANCTRL);
 			errcnt++;
 		}
 		close(ibm_fan);
@@ -104,15 +103,15 @@ int init_fan_ibm() {
 	int module_valid=0;
 
 	if ((ibm_fan = fopen(IBM_FAN, "r+")) == NULL) {
-		showerr(IBM_FAN);
+		report(LOG_ERR, LOG_ERR, IBM_FAN ": %s\n"
+				MSG_ERR_FANFILE_IBM, strerror(errno));
 		errcnt++;
-		message(LOG_ERR, MSG_ERR_FANFILE_IBM);
 		return ERR_FAN_INIT;
 	}
 	while (getline(&line, &count, ibm_fan) != -1)
 		if (!strncmp("commands:", line, 9)) module_valid = 1;
 	if (!module_valid) {
-		message(LOG_ERR, MSG_ERR_MODOPTS);
+		report(LOG_ERR, LOG_ERR, MSG_ERR_MODOPTS);
 		errcnt++;
 		return ERR_FAN_INIT;
 	}
@@ -129,7 +128,7 @@ void uninit_fan_ibm() {
 	FILE *fan;
 
 	if ((fan = fopen(IBM_FAN, "r+")) == NULL) {
-		showerr(IBM_FAN);
+		report(LOG_ERR, LOG_ERR, IBM_FAN ": %s", strerror(errno));
 		errcnt++;
 	}
 	else {
@@ -145,18 +144,18 @@ void uninit_fan_ibm() {
 void disengage() {
 	int ibm_fan;
 	if (unlikely((ibm_fan = open(IBM_FAN, O_RDWR)) < 0)) {
-		showerr(IBM_FAN);
+		report(LOG_ERR, LOG_ERR, IBM_FAN ": %s", strerror(errno));
 		errcnt++;
 	}
 	else {
 		if (write(ibm_fan, "level disengaged", 16) < 16) {
-			showerr(IBM_FAN);
+			report(LOG_ERR, LOG_ERR, IBM_FAN ": %s", strerror(errno));
 			errcnt++;
 		}
 		close(ibm_fan);
 	}
 	if (nanosleep(depulse, NULL)) {
-		showerr("nanosleep()");
+		report(LOG_ERR, LOG_ERR, "nanosleep(): %s", strerror(errno));
 		errcnt++;
 	}
 }
@@ -190,7 +189,8 @@ int get_temp_sysfs() {
 		if (unlikely((fd = open(config->sensors[idx].path, O_RDONLY)) == -1
 				|| (num = read(fd, &buf, 6)) == -1
 				|| close(fd) < 0)) {
-			showerr(config->sensors[idx].path);
+			report(LOG_ERR, LOG_ERR, "%s: %s", config->sensors[idx].path,
+					strerror(errno));
 			errcnt++;
 			return ERR_T_GET;
 		}
@@ -200,7 +200,7 @@ int get_temp_sysfs() {
 		idx++;
 	}
 	if (unlikely(rv < 1)) {
-		message(LOG_ERR, MSG_ERR_T_GET);
+		report(LOG_ERR, LOG_ERR, MSG_ERR_T_GET);
 		errcnt++;
 	}
 	return rv;
@@ -216,7 +216,7 @@ void setfan_sysfs() {
 	memset(buf, 0, 5);
 
 	if (unlikely((fan = open(config->fan, O_WRONLY)) < 0)) {
-		showerr(config->fan);
+		report(LOG_ERR, LOG_ERR, "%s: %s", config->fan, strerror(errno));
 		errcnt++;
 	}
 	else {
@@ -224,7 +224,7 @@ void setfan_sysfs() {
 		ret = (int)r + write(fan, buf, 5);
 		close(fan);
 		if (unlikely(ret < 2)) {
-			message(LOG_ERR, MSG_ERR_FANCTRL);
+			report(LOG_ERR, LOG_ERR, MSG_ERR_FANCTRL);
 			errcnt++;
 		}
 	}
@@ -258,19 +258,20 @@ int preinit_fan_sysfs() {
 	strcat(fan_enable, "_enable");
 
 	if ((fan = fopen(fan_enable, "r")) == NULL) {
-		showerr(fan_enable);
+		report(LOG_ERR, LOG_ERR, "%s: %s", fan_enable, strerror(errno));
 		errcnt++;
 		free(fan_enable);
 		return ERR_FAN_INIT;
 	}
 	free(oldpwm);
 	oldpwm = NULL;
-	if ((r = getline(&oldpwm, &s, fan)) < 2) showerr(fan_enable);
+	if ((r = getline(&oldpwm, &s, fan)) < 2)
+		report(LOG_ERR, LOG_ERR, "%s: %s", fan_enable, strerror(errno));
 	fclose(fan);
 	free(fan_enable);
 	if (r < 2) {
 		errcnt++;
-		message(LOG_ERR, MSG_ERR_FAN_INIT);
+		report(LOG_ERR, LOG_ERR, MSG_ERR_FAN_INIT);
 		return ERR_FAN_INIT;
 	}
 	return 0;
@@ -288,17 +289,18 @@ int init_fan_sysfs() {
 	strcat(fan_enable, "_enable");
 
 	if ((fd = open(fan_enable, O_WRONLY)) < 0) {
-		showerr(fan_enable);
+		report(LOG_ERR, LOG_ERR, "%s: %s", fan_enable, strerror(errno));
 		errcnt++;
 		free(fan_enable);
 		return ERR_FAN_INIT;
 	}
-	if ((r = write(fd, "1\n", 2)) < 2) showerr(fan_enable);
+	if ((r = write(fd, "1\n", 2)) < 2)
+		report(LOG_ERR, LOG_ERR, "%s: %s", fan_enable, strerror(errno));
 	close(fd);
 	free(fan_enable);
 	if (r < 2) {
 		errcnt++;
-		message(LOG_ERR, MSG_ERR_FAN_INIT);
+		report(LOG_ERR, LOG_ERR, MSG_ERR_FAN_INIT);
 		return ERR_FAN_INIT;
 	}
 	return 0;
@@ -312,7 +314,7 @@ void uninit_fan_sysfs() {
 
 	if (oldpwm) {
 		if ((fan = fopen(config->fan, "r+")) == NULL) {
-			showerr(config->fan);
+			report(LOG_ERR, LOG_ERR, "%s: %s", config->fan, strerror(errno));
 			errcnt++;
 		}
 		else {
